# Inventory

./: README.md  cst-all-plugins.json  cst-inventory-download.json  cst-inventory-help.json  cst-inventory-landing.json  cst-inventory-screens.json  cst-inventory.json  cst-inventory14.json  cst-mobile-search.json  cst-mobile-webapps.json  cst-plugins.json  cst-products.json  cst-sdk.json  cst-sharecad.json  cst-web-search.json  cst-webapps.json  cst-webcad-sdk.json  worklog.md
agent-ctx/: inventory-dxf-main.md
db/: custom.db
download/: building_B_sample.dxf  schita_analysis.json  signed_p1_analysis.json  signed_p2_analysis.json  signed_p3_analysis.json  signed_p4_analysis.json  signed_p5_analysis.json  signed_p6_analysis.json  test_building.dxf  test_canvas_v4.dxf
inventory-bot/: .env.example  config.py  keyboards.py  main.py  pyproject.toml  storage.py  test_dxf.py
inventory-bot/handlers/: __init__.py  building.py  common.py  export.py  room.py
inventory-bot/handlers/room/: __init__.py  openings.py  states.py  walls.py
inventory-bot/models/: __init__.py  data_models.py
inventory-bot/output/: building_B.dxf
inventory-bot/services/: __init__.py  dxf_generator.py
inventory-bot/services/dxf/: __init__.py  annotations.py  generator.py  utils.py  walls.py
prisma/: schema.prisma
src/app/: page.tsx
src/hooks/: index.ts  use-building-data.ts  use-canvas-editor.ts  use-canvas-render.ts  use-floor-plan.ts  use-wall-mutations.ts
src/lib/: constants.ts  opening-presets.ts  plan-utils.ts
src/store/: inventory-store.ts
upload/: 31561010198.04=1P.dxf
(+48 files in other folders)
